# orchestral

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  REFACTOR_PLAN.md  codex_prompt.txt  readme.md  recent_diff.txt
adapters/orchestral-infra/: Cargo.toml
adapters/orchestral-infra/src/: lib.rs
apps/orchestral-server/: Cargo.toml
apps/orchestral-server/src/: lib.rs
apps/orchestral-telegram/: Cargo.toml
apps/orchestral-telegram/src/: config.rs  main.rs  telegram.rs
core/orchestral/: Cargo.toml
core/orchestral-core/: Cargo.toml
core/orchestral-core/src/: lib.rs
core/orchestral-core/src/action/: context.rs  mod.rs  result.rs
core/orchestral-core/src/config/: actions.rs  loader.rs  mod.rs  providers.rs
core/orchestral-core/src/executor/: action_runner.rs  dag.rs  logging.rs  mod.rs  progress.rs  run.rs  schema.rs  step_support.rs  types.rs
core/orchestral-core/src/interpreter/: mod.rs
core/orchestral-core/src/io/: mod.rs
core/orchestral-core/src/normalizer/: agent.rs  implicit.rs  mod.rs  validation.rs
core/orchestral-core/src/planner/: mod.rs
core/orchestral-core/src/recipe/: builtins.rs  mod.rs  overrides.rs  rewrite.rs  tests.rs
core/orchestral-core/src/spi/: lifecycle.rs  mod.rs
core/orchestral-core/src/store/: event_bus.rs  memory_event.rs  memory_reference.rs  memory_task.rs  mod.rs  reference_store.rs  task_store.rs  working_set.rs
core/orchestral-core/src/types/: continuation.rs  mod.rs  patch_candidates.rs  plan.rs  skeleton.rs  stage.rs  stage_plan.rs  step.rs  task.rs  verify.rs
core/orchestral-runtime/: Cargo.toml
core/orchestral-runtime/src/: bootstrap.rs  concurrency.rs  interaction.rs  interpreter.rs  lib.rs  orchestrator.rs  sdk.rs  session.rs  system_prompts.rs  system_prompts.template.txt  thread.rs  thread_runtime.rs
core/orchestral-runtime/src/action/: builtin.rs  codebase.rs  document.rs  external.rs  factory.rs  loader.rs  mcp.rs  mod.rs  providers.rs  shell_sandbox.rs  skill.rs  spreadsheet.rs  structured.rs  test_hooks.rs
core/orchestral-runtime/src/agent/: executor.rs  finalize.rs  materialize.rs  mod.rs  parsing.rs  preflight.rs  progress.rs  prompt.rs  tests.rs  types.rs
core/orchestral-runtime/src/api/: error.rs  mod.rs  runtime.rs  service.rs
core/orchestral-runtime/src/bootstrap/: blob_store.rs  components.rs  observability.rs  runtime_builder.rs
core/orchestral-runtime/src/context/: mod.rs
core/orchestral-runtime/src/orchestrator/: agent_loop.rs  entry.rs  execution.rs  output.rs  planning.rs  progress.rs  reactor_choice.rs  reactor_loop.rs  reactor_resume.rs  recovery.rs  state.rs  support.rs  tests.rs
core/orchestral-runtime/src/planner/: factory.rs  gemini.rs  llm.rs  mod.rs
core/orchestral-runtime/src/prompts/: action_call_rules.md  non_reactor_constitution.md  non_reactor_user_rules.md  output_contract.md  planner_constitution.md  planner_execution_rules.md  planner_user_rules.md  reactor_constitution.md  reactor_hard_rules.md  reactor_skeleton_vocabulary.md  reactor_user_rules.md
core/orchestral-runtime/src/skill/: discovery.rs  mod.rs
core/orchestral-runtime/tests/: sdk_integration.rs
core/orchestral/src/: lib.rs
crates/orchestral-composition/: Cargo.toml
crates/orchestral-composition/src/: lib.rs
crates/orchestral-context/: Cargo.toml
crates/orchestral-context/src/: lib.rs
crates/orchestral-core/: Cargo.toml
crates/orchestral-core/src/: lib.rs
crates/orchestral-core/src/action/: context.rs  input.rs  result.rs
crates/orchestral-core/src/executor/: mod.rs
crates/orchestral-core/src/interpreter/: mod.rs
crates/orchestral-core/src/io/: mod.rs
crates/orchestral-runtime/: Cargo.toml
crates/orchestral-runtime/src/: bootstrap.rs  concurrency.rs  hooks.rs  interpreter.rs  lib.rs  orchestrator.rs  thread_runtime.rs
crates/orchestral-spi/: Cargo.toml
crates/orchestral-spi/src/: lib.rs
examples/: Cargo.toml  basic_usage.rs  config_loading.rs  llm_planner.rs  runtime_pipeline.rs  sdk_hooks.rs  sdk_quickstart.rs
examples/extensions/: echo_extension.py  markitdown_extension.py  pandoc_extension.py
examples/plugins/: echo_plugin.py  markitdown_plugin.py  pandoc_plugin.py
examples/src/: lib.rs
extensions/orchestral-docs-assistant/: Cargo.toml
extensions/orchestral-docs-assistant/src/: document_actions.rs  lib.rs
extensions/orchestral-docs-assistant/tests/: document_assistant_integration.rs
extensions/orchestral-extension-host/: Cargo.toml
extensions/orchestral-extension-host/src/: lib.rs
orchestral-actions/: Cargo.toml
orchestral-actions/src/: builtin.rs  config.rs  factory.rs  lib.rs  loader.rs
orchestral-api/: Cargo.toml
orchestral-api/src/: runtime.rs  service.rs
orchestral-channels/: Cargo.toml
orchestral-channels/src/: binding.rs  cli.rs  cli_runtime.rs  lib.rs
orchestral-cli/: Cargo.toml
orchestral-cli/src/: cli.rs  main.rs  theme.rs
orchestral-cli/src/runtime/: client.rs  event_projection.rs  mod.rs  protocol.rs
orchestral-cli/src/tui/: app.rs  event_loop.rs  mod.rs  protocol.rs  ui.rs  update.rs
orchestral-config/: Cargo.toml
orchestral-config/src/: actions.rs  lib.rs  loader.rs  providers.rs
orchestral-planners/: Cargo.toml
orchestral-planners/src/: factory.rs  gemini.rs  lib.rs  llm.rs
orchestral-stores/: Cargo.toml
orchestral-stores/src/: event_bus.rs  event_store.rs  lib.rs  reference_store.rs  task_store.rs
platform/orchestral-composition/: Cargo.toml
platform/orchestral-composition/src/: lib.rs
platform/orchestral-docs-assistant/: Cargo.toml
platform/orchestral-docs-assistant/src/: document_actions.rs  lib.rs
platform/orchestral-docs-assistant/tests/: document_assistant_integration.rs
platform/orchestral-files/: Cargo.toml
platform/orchestral-stores-backends/: Cargo.toml
platform/orchestral-stores-backends/src/: lib.rs  sqlite_store.rs
plugins/orchestral-plugin-host/: Cargo.toml
plugins/orchestral-plugin-host/src/: lib.rs
plugins/orchestral-stores-backends/: Cargo.toml
plugins/orchestral-stores-backends/src/: reference_store.rs
src/: lib.rs
(+306 files in other folders)
