[workspace]
resolver = "2"
members = [
    "crates/orchestral-spi",
    "crates/orchestral-core",
    "crates/orchestral-config",
    "crates/orchestral-context",
    "crates/orchestral-composition",
    "extensions/orchestral-docs-assistant",
    "extensions/orchestral-extension-host",
    "adapters/orchestral-files",
    "adapters/orchestral-infra",
    "crates/orchestral-planners",
    "crates/orchestral-runtime",
    "crates/orchestral-stores",
    "adapters/orchestral-stores-backends",
    "crates/orchestral-actions",
    "crates/orchestral-api",
    "crates/orchestral-channels",
    "apps/orchestral-server",
    "apps/orchestral-cli",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/orchestral"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql", "chrono", "json", "uuid"] }
futures-util = "0.3"
bytes = "1"
kreuzberg = { version = "4.2.0", default-features = false, features = [
    "tokio-runtime",
    "office",
    "excel",
    "email",
    "html",
    "xml",
    "archives",
] }

# Internal crates
orchestral-core = { path = "crates/orchestral-core" }
orchestral-config = { path = "crates/orchestral-config" }
orchestral-context = { path = "crates/orchestral-context" }
orchestral-composition = { path = "crates/orchestral-composition" }
orchestral-docs-assistant = { path = "extensions/orchestral-docs-assistant" }
orchestral-extension-host = { path = "extensions/orchestral-extension-host" }
orchestral-spi = { path = "crates/orchestral-spi" }
orchestral-files = { path = "adapters/orchestral-files" }
orchestral-infra = { path = "adapters/orchestral-infra" }
orchestral-planners = { path = "crates/orchestral-planners" }
orchestral-runtime = { path = "crates/orchestral-runtime" }
orchestral-stores = { path = "crates/orchestral-stores" }
orchestral-stores-backends = { path = "adapters/orchestral-stores-backends" }
orchestral-actions = { path = "crates/orchestral-actions" }
orchestral-api = { path = "crates/orchestral-api" }
orchestral-channels = { path = "crates/orchestral-channels" }
orchestral-server = { path = "apps/orchestral-server" }

[workspace.dependencies.tokio-test]
version = "0.4"
