[workspace]
resolver = "2"
members = [
    # Core (Tier 1 - publishable as lib, no platform dependencies)
    "core/orchestral-core",
    "core/orchestral-runtime",
    "core/orchestral",

    # Apps
    "apps/orchestral-cli",
    "apps/orchestral-telegram",

    # Examples
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/orchestral"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
bytes = "1"

# Internal crates - Core
orchestral = { path = "core/orchestral" }
orchestral-core = { path = "core/orchestral-core" }
orchestral-runtime = { path = "core/orchestral-runtime" }

[workspace.dependencies.tokio-test]
version = "0.4"
