[package]
name = "orchestral-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "basic_usage"
path = "basic_usage.rs"

[[example]]
name = "runtime_pipeline"
path = "runtime_pipeline.rs"

[[example]]
name = "llm_planner"
path = "llm_planner.rs"

[[example]]
name = "config_loading"
path = "config_loading.rs"

[dependencies]
orchestral-core = { path = "../crates/orchestral-core" }
orchestral-config = { path = "../crates/orchestral-config" }
orchestral-context = { path = "../crates/orchestral-context" }
orchestral-planners = { path = "../crates/orchestral-planners" }
orchestral-runtime = { path = "../crates/orchestral-runtime" }
orchestral-stores = { path = "../crates/orchestral-stores" }
orchestral-actions = { path = "../crates/orchestral-actions" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
