[package]
name = "orchestral-cli"
description = "Command line interface for running Orchestral workflows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orchestral-runtime = { workspace = true }
orchestral-stores = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
anyhow = "1"
futures-util = "0.3"
unicode-width = "0.1"
textwrap = "0.16"
