[package]
name = "orchestral-planners"
description = "Planner implementations for Orchestral"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orchestral-core = { workspace = true }
orchestral-config = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
llm_sdk = { package = "llm", version = "1.3.6", default-features = false, features = ["openai", "google"] }
