[package]
name = "orchestral-infra"
description = "Infrastructure component factory for stores/blob backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orchestral-config = { workspace = true }
orchestral-core = { workspace = true }
orchestral-spi = { workspace = true }
orchestral-files = { workspace = true }
orchestral-stores = { workspace = true }
orchestral-stores-backends = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-types = "1"

[dev-dependencies]
tokio = { workspace = true }
