[package]
name = "orchestral-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telegram bot adapter for Orchestral"

[dependencies]
orchestral = { path = "../../core/orchestral" }
orchestral-core = { path = "../../core/orchestral-core" }
orchestral-runtime = { path = "../../core/orchestral-runtime" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
