[package]
name = "orchestral"
description = "Workflow orchestration for grounded agents — stateful multi-step pipelines with agent loop, MCP tools, and skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
orchestral-core = { workspace = true }
orchestral-runtime = { workspace = true }
