[package]
name = "orchestral-extension-host"
description = "Runtime extension host (actions/hooks/components) for CLI and server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orchestral-config = { workspace = true }
orchestral-docs-assistant = { workspace = true }
orchestral-spi = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true }
