[package]
name = "orchestral-docs-assistant"
description = "Document assistant extension with async parse/chunk/embed ingestion pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
pdf = ["kreuzberg/pdf"]

[dependencies]
orchestral-core = { workspace = true }
orchestral-runtime = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
kreuzberg = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
