[package]
name = "orchestral-stores-backends"
description = "Redis/Postgres store backend implementations for Orchestral"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orchestral-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
